# raywarden

./: .gitignore  Cargo.toml  rustfmt.toml  wrangler.toml
sql/: schema.sql
src/: api.rs  attchments.js  entry.js  errors.rs  infra.rs  lib.rs  warden.rs
src/api/: controller.rs  middleware.rs  routers.rs
src/api/controller/: accounts.rs  attachments.rs  ciphers.rs  config.rs  devices.rs  domains.rs  emergency.rs  folders.rs  identity.rs  import.rs  meta.rs  purge.rs  sync.rs  twofactor.rs
src/api/routers/: accounts.rs  attachments.rs  ciphers.rs  config.rs  devices.rs  emergency.rs  folders.rs  identity.rs  others.rs  sync.rs  twofactor.rs  webauth.rs
src/api/service/: auth.rs  claims.rs  kdf.rs  rate.rs  user.rs
src/infra/: cfg.rs  cryptor.rs  dber.rs  jwtor.rs
src/models/: attachment.rs  cipher.rs  domains.rs  folder.rs  import.rs  meta.rs  mod.rs  serde_helpers.rs  sync.rs  twofactor.rs  user.rs
src/warden/: api.rs  routers.rs  service.rs
src/warden/api/: accounts.rs  config.rs  folders.rs  identity.rs  sync.rs  twofactor.rs  webauth.rs
src/warden/routers/: accounts.rs  config.rs  devices.rs  emergency.rs  folders.rs  identity.rs  sync.rs  twofactor.rs  webauth.rs
src/warden/service/: auth.rs  claims.rs  kdf.rs  rate.rs  user.rs
tools/: init.sh  sync-ui.sh  vaultwarden.css
